Finalizado os testes de integração e refatoração do app
